/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.2/samples
 */
plugins {
	id 'com.stehno.natives' version '0.3.1'
}

apply plugin: 'java'
apply plugin: 'application'

mainClassName = 'client.Game'

repositories { 
    mavenCentral() 
}

compileJava {
    sourceCompatibility = 21
}

jar {
    dependsOn includeNatives
    archiveBaseName = 'ShadowStone'
    archiveVersion =  '0.1.0'
    manifest {
        attributes 'Main-Class': 'client.Game'
    }
    from {
        configurations.runtimeClasspath
                .collect { file ->
                    file.isDirectory() ? file : zipTree(file).matching {
                        exclude "*.dll", "*.so", "*.jnilib", "*.dylib" // these will be manually included
                    }
                }
    }
}

dependencies {
    // https://mvnrepository.com/artifact/org.slick2d/slick2d-core
    implementation 'org.slick2d:slick2d-core:1.0.0'
    implementation 'org.jetbrains:annotations:20.1.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
    testImplementation 'org.mockito:mockito-core:4.2.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.2.0'
}

run {
    dependsOn includeNatives
    // https://github.com/cjstehno/gradle-natives
    systemProperty 'java.library.path', "${System.getProperty("java.library.path")}" +
        "${File.pathSeparator}build/libs"
}

test {
    useJUnitPlatform()
}

natives {
    configurations = ['runtimeClasspath']
    outputDir = 'libs'
}
